@@ -10,11 +10,18 @@ dependencies {
     implementation(libs.rapunzellib.network)
     implementation(libs.rapunzellib.common)
     implementation(libs.rapunzellib.database.spool)
+    implementation(libs.rapunzellib.nbt)
+    implementation(libs.rapunzellib.nbt.paper)
+ implementation(libs.rapunzellib.events)
 
     paperweight.paperDevBundle(libs.versions.paper.dev.bundle.get())
 
     // CommandAPI
     implementation(libs.commandapi.paper.shade)
+
+    compileOnly(libs.vault) {
+        exclude(group = "org.bukkit", module = "bukkit")
+    }
 
     // Reflections for module discovery
     implementation(libs.reflections)
@@ -23,6 +30,7 @@ dependencies {
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
+    options.compilerArgs.add("--enable-preview")
 
 }
 
@@ -32,7 +40,7 @@ tasks {
         archiveClassifier.set("")
 
         // Relocate dependencies to avoid conflicts
-        relocate("org.reflections", "de.t14d3.rapunzelcore.libs.reflections")   
+        relocate("org.reflections", "de.t14d3.rapunzelcore.libs.reflections")
         exclude("META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")
     }
 
